Added Expandable CardView

--- a/app/src/main/res/layout/activity_all_books.xml
+++ b/app/src/main/res/layout/activity_all_books.xml
@@ -10,6 +10,8 @@
         android:id="@+id/booksRecView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:padding="8dp" />
+
+        android:clipToPadding="false"
+
+/>
 </RelativeLayout>
