--- a/app/src/main/res/layout/activity_already_read.xml
+++ b/app/src/main/res/layout/activity_already_read.xml
@@ -9,6 +9,5 @@
         android:id="@+id/booksRecView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:padding="8dp" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
